--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -74,3 +74,28 @@ a
 .info
   align-self: center
   justify-self: center
+
+@media (max-width: 425px)
+  .header
+    max-height: 55px
+    background-color: rgba(116, 101, 156, 0.548)
+    display: grid
+    grid-template-rows: 32px 22px
+    grid-template-columns: .5fr .5fr .3fr
+    position: relative
+
+  .logo
+    justify-content: center
+    margin-left: 10px
+    grid-row: 1/2
+    grid-column: 1/2
+
+  .title,
+  .titleH2
+    justify-content: center
+    grid-row: 1/2
+    grid-column: 2/3
+
+  .language,
+  .info
+    display: none
