--- a/sass/_leftBlock.sass
+++ b/sass/_leftBlock.sass
@@ -1,4 +1,8 @@
 
+.left
+  grid-row: 2/3
+  grid-column: 1/2
+  
 .for_btn
   position: relative
 
@@ -30,3 +34,41 @@
   font-size: 18px
   display: block
   margin-left: auto
+
+@media (max-width: 425px)
+    .left
+      grid-row: 3/4
+      grid-column: 1/4
+      padding: 0
+
+    .btnStart,
+    .btnStop
+      width: 100px
+      height: 50px
+      font-size: 20px
+      margin: 0 15px
+
+    .for_btn
+      display: grid
+      grid-template-rows: 52px
+      grid-template-columns: repeat(3, auto)
+      justify-content: center
+      align-items: center
+
+    .btnStart
+      grid-row: 1/2
+      grid-column: 1/2
+
+    .btnStop
+      grid-row: 1/2
+      grid-column: 3/4
+
+    #enter
+      grid-row: 1/2
+      grid-column: 2/3
+      width: 100px
+      height: 50px
+      text-align: center
+      font-size: 20px
+      margin: 0
+      padding: 0
