--- a/sass/_base.sass
+++ b/sass/_base.sass
@@ -1,4 +1,20 @@
 
+$colorTitle: rgba(48, 41, 107, 0.644)
+$back: rgba(136, 169, 196, 0.815)
+$mobColor: rgb(174, 217, 245)
+$logo: rgba(222, 167, 135, 0.884)
+$mobBtn: rgb(132, 172, 172)
+$colorFood: rgb(20, 136, 49)
+$pole: rgba(164, 182, 116, 0.918)
+$bodySnake: rgba(48, 41, 107, 0.644)
+$header: rgba(116, 101, 156, 0.548)
+$border: rgba(70, 125, 151, 0.692)
+$subMenu: rgba(79, 113, 119, 0.329)
+$btnColor: #757ac0b9
+$btnHov: rgb(224, 228, 166)
+$btnAct: rgb(219, 175, 109)
+$shadow: rgba(143, 188, 215, 0.584)
+
 *
   margin: 0
   padding: 0
@@ -23,7 +39,7 @@ a
   cursor: pointer
 
 html
-  background-color: rgba(136, 169, 196, 0.815)
+  background-color: $back
 
 body
   font-family: 'Balsamiq Sans', cursive
@@ -54,7 +70,7 @@ h1
 h2
   font-stretch: expanded
   font-size: xx-large
-  color: rgba(48, 41, 107, 0.644)
+  color: $colorTitle
 
 @media (max-width: 425px)
   main
