--- a/sass/_mobilMenu.sass
+++ b/sass/_mobilMenu.sass
@@ -12,7 +12,7 @@
   left: -100%
   top: 60px
   border-radius: 5px
-  background-color: rgba(79, 113, 119, 0.329)
+  background-color: $subMenu
   transition: all .4s ease
 
 .sub_active
@@ -20,7 +20,7 @@
   transition: all .4s ease
 
 .s_menu
-  color: rgb(54, 65, 114)
+  color: $border
   cursor: pointer
   margin: 20px 10px
   font-size: 1.2em
@@ -61,7 +61,7 @@
     height: 10%
     width: 100%
     transition: all .3s ease 0s
-    background-color: rgba(48, 41, 107, 0.644)
+    background-color: $bodySnake
 
   .mob_menu span
     top: 50%
