--- a/sass/_smallWindow.sass
+++ b/sass/_smallWindow.sass
@@ -2,7 +2,7 @@
 .shadow
   position: absolute
   z-index: 1
-  background-color: rgba(143, 188, 215, 0.584)
+  background-color: $shadow
   visibility: hidden
   min-height: 200px
   top: 0
@@ -24,7 +24,7 @@
   z-index: 30
   color: bisque
   transition: .7s ease
-  background-color: rgba(116, 147, 231, 0.781)
+  background-color: $border
 
 .wind_info_active
   top: 82px
@@ -33,7 +33,7 @@
 
 .over
   position: absolute
-  background-color: rgb(135, 190, 207)
+  background-color: $border
   border: 2px solid black
   border-radius: 5px
   padding: 10px
