--- a/sass/_center.sass
+++ b/sass/_center.sass
@@ -4,7 +4,7 @@
   grid-row: 2/3
   grid-column: 2/3
   position: relative
-  border: 4px solid rgba(70, 125, 151, 0.692)
+  border: 4px solid $border
   margin: 30px
   display: grid
   grid-template: repeat(20, 20px) / repeat(20, 20px)
@@ -15,32 +15,32 @@
 .kub
   width: 20px
   height: 20px
-  background-color: rgba(164, 182, 116, 0.918)
+  background-color: $pole
   transition: all .1s ease
 
 .kub_activ
-  background-color: rgba(48, 41, 107, 0.644)
+  background-color: $bodySnake
   transition: all .2s ease
 
 .heads
   background-color: brown
 
 .food
-  background-color: rgb(20, 136, 49)
+  background-color: $colorFood
 
 @media (max-width: 425px)
   .kub
     width: 15px
     height: 15px
-    background-color: rgba(164, 182, 116, 0.918)
+    background-color: $pole
     transition: all .1s ease
 
   .kub_activ
-    background-color: rgba(48, 41, 107, 0.644)
+    background-color: $bodySnake
     transition: all .2s ease
 
   .food
-    background-color: rgb(20, 136, 49)
+    background-color: $colorFood
 
   .container
     grid-row: 2/3
