--- a/sass/_mobilMedia.sass
+++ b/sass/_mobilMedia.sass
@@ -13,7 +13,7 @@
   #mBot4
     align-self: end
     justify-self: center
-    background-color: rgb(132, 172, 172)
+    background-color: $mobBtn
 
   .mobBtn
     display: flex
@@ -33,7 +33,7 @@
   .btnUp
     width: 40px
     height: 40px
-    color: rgb(174, 217, 245)
+    color: $mobColor
 
   .btnLeft
     transform: rotate(180deg)
