fix color mobiltext

--- a/sass/_mobilMenu.sass
+++ b/sass/_mobilMenu.sass
@@ -20,7 +20,7 @@
   transition: all .4s ease
 
 .s_menu
-  color: $border
+  color: $colorTitle
   cursor: pointer
   margin: 20px 10px
   font-size: 1.2em
