--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -5,11 +5,21 @@
   background-color: $header
   border-radius: 5px
   display: grid
-  grid-template: 70px / repeat(4, 0.8fr) repeat(3, .4fr)
+  grid-template: 70px / .8fr .5fr .5fr .8fr
   position: relative
 
 .logo
   grid-column: 1 / 2
+
+.title,
+.titleH2
+  grid-column: 2 / 3
+
+.language
+  grid-column: 3 / 4
+  
+.info
+  grid-column: 4 / 5
 
 label,
 a
@@ -42,19 +52,14 @@ a
   width: 10px
   margin-top: 1px
 
-
-.title,
-.titleH2
-  grid-column: 2 / 3
-
 .points_snake
-  grid-column: 3 / 4
+  grid-row: 6/7
+  grid-column: 1/2
 
 .points_result
-  grid-column: 4 / 5
+  grid-row: 6/7
+  grid-column: 2/3
 
-.info
-  grid-column: 6/7
 
 .logo
   display: flex
@@ -80,7 +85,7 @@ a
     max-height: 55px
     background-color: $header
     display: grid
-    grid-template-rows: 32px 22px
+    grid-template-rows: 54px
     grid-template-columns: .5fr .5fr .3fr
     position: relative
 
@@ -99,3 +104,14 @@ a
   .language,
   .info
     display: none
+
+  .record_mob
+    grid-row: 6/7
+    grid-column: 3/4
+
+  .mob_rec,
+  .ochKi,
+  .resUlt,
+  .zmi,
+  .lenSnake
+    color: $btnColor
