fix menu for mobile

--- a/sass/_mobilMedia.sass
+++ b/sass/_mobilMedia.sass
@@ -44,10 +44,12 @@
   .btnUp
     transform: rotate(-90deg)
 
+
   /* ВЛЕВО */
   #mBot1
     grid-row: 1/2
     grid-column: 1/2
+    margin-left: 15px
 
   /* ВНИЗ */
   #mBot2
@@ -58,6 +60,7 @@
   #mBot3
     grid-row: 1/2
     grid-column: 4/5
+    margin-right: 15px
 
   /* ВВЕРХ */
   #mBot4
