--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -55,11 +55,14 @@ a
 .points_snake
   grid-row: 6/7
   grid-column: 1/2
+  padding-left: 15px
 
 .points_result
   grid-row: 6/7
   grid-column: 2/3
 
+.record_mob
+  padding-right: 15px
 
 .logo
   display: flex
@@ -70,7 +73,6 @@ a
     border-radius: 50%
 
 .logo,
-.title,
 .points_snake,
 .points_result,
 .language,
@@ -79,6 +81,9 @@ a
 .info
   align-self: center
   justify-self: center
+
+.title
+  align-self: center
 
 @media (max-width: 425px)
   .header
@@ -95,7 +100,6 @@ a
     grid-row: 1/2
     grid-column: 1/2
 
-  .title,
   .titleH2
     justify-content: center
     grid-row: 1/2
@@ -115,3 +119,4 @@ a
   .zmi,
   .lenSnake
     color: $btnColor
+    font-size: 1em
