--- a/style/style.css
+++ b/style/style.css
@@ -60,7 +60,6 @@ main {
 }
 
 h1,
-.titleH2,
 h3 {
   text-align: center;
 }
@@ -177,6 +176,7 @@ a {
   -ms-grid-column: 1;
   -ms-grid-column-span: 1;
   grid-column: 1/2;
+  padding-left: 15px;
 }
 
 .points_result {
@@ -186,6 +186,10 @@ a {
   -ms-grid-column: 2;
   -ms-grid-column-span: 1;
   grid-column: 2/3;
+}
+
+.record_mob {
+  padding-right: 15px;
 }
 
 .logo {
@@ -204,7 +208,6 @@ a {
 }
 
 .logo,
-.title,
 .points_snake,
 .points_result,
 .language,
@@ -216,6 +219,12 @@ a {
       align-self: center;
   -ms-grid-column-align: center;
       justify-self: center;
+}
+
+.title {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
 }
 
 @media (max-width: 425px) {
@@ -242,7 +251,6 @@ a {
     -ms-grid-column-span: 1;
     grid-column: 1/2;
   }
-  .title,
   .titleH2 {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
@@ -272,6 +280,7 @@ a {
   .zmi,
   .lenSnake {
     color: #757ac0b9;
+    font-size: 1em;
   }
 }
 
@@ -811,6 +820,7 @@ th {
     -ms-grid-column: 1;
     -ms-grid-column-span: 1;
     grid-column: 1/2;
+    margin-left: 15px;
   }
   /* ВНИЗ */
   #mBot2 {
@@ -829,6 +839,7 @@ th {
     -ms-grid-column: 4;
     -ms-grid-column-span: 1;
     grid-column: 4/5;
+    margin-right: 15px;
   }
   /* ВВЕРХ */
   #mBot4 {
