--- a/sass/_leftBlock.sass
+++ b/sass/_leftBlock.sass
@@ -21,8 +21,10 @@
   color: $btnHov
   &:hover
     background-color: $btnHov
+    color: $bodySnake
   &:active
     background-color: $btnAct
+    color: $bodySnake
     transition: all 0.5s
 
 #enter
