--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -8,6 +8,10 @@
   grid-template: 70px / .8fr .5fr .5fr .8fr
   position: relative
 
+// .logotip img
+//   height: 65px
+//   width: 230px
+
 .logo
   grid-column: 1 / 2
 
