--- a/style/style.css
+++ b/style/style.css
@@ -108,6 +108,12 @@ h2 {
   position: relative;
 }
 
+.logotip {
+  height: 52px;
+  width: 150px;
+  background-image: url(/img/logotip.png);
+}
+
 .logo {
   -ms-grid-column: 1;
   -ms-grid-column-span: 1;
@@ -139,44 +145,17 @@ a {
   color: rgba(48, 41, 107, 0.644);
 }
 
-.hed {
-  height: 25px;
-  width: 25px;
-  margin-top: 1px;
-}
-
-.bod_2 {
-  height: 20px;
-  width: 20px;
-  margin-top: 1px;
-}
-
-.bod_3 {
-  height: 18px;
-  width: 18px;
-  margin-top: 7px;
-}
-
-.tail_2 {
-  height: 14px;
-  width: 14px;
-  margin-top: 5px;
-}
-
-.tail {
-  height: 10px;
-  width: 10px;
-  margin-top: 1px;
-}
-
 .points_snake {
   -ms-grid-row: 6;
   -ms-grid-row-span: 1;
   grid-row: 6/7;
-  -ms-grid-column: 1;
+  -ms-grid-column: 2;
   -ms-grid-column-span: 1;
-  grid-column: 1/2;
-  padding-left: 15px;
+  grid-column: 2/3;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  justify-self: start;
 }
 
 .points_result {
@@ -186,30 +165,17 @@ a {
   -ms-grid-column: 2;
   -ms-grid-column-span: 1;
   grid-column: 2/3;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  justify-self: end;
 }
 
 .record_mob {
   padding-right: 15px;
 }
 
-.logo {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: end;
-}
-
-.logo span {
-  background-color: rgba(222, 167, 135, 0.884);
-  border: 1px solid black;
-  border-radius: 50%;
-}
-
 .logo,
-.points_snake,
-.points_result,
 .language,
 .mob_menu,
 .record_mob,
@@ -250,6 +216,11 @@ a {
     -ms-grid-column: 1;
     -ms-grid-column-span: 1;
     grid-column: 1/2;
+  }
+  .logotip {
+    height: 28px;
+    width: 80px;
+    background-image: url(/img/mini_logotip.png);
   }
   .titleH2 {
     -webkit-box-pack: center;
