--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -11,7 +11,7 @@
 .logotip
   height: 52px
   width: 150px
-  background-image: url(/img/logotip.png)
+  background-image: url(./img/logotip.png)
 
 .logo
   grid-column: 1 / 2
@@ -76,7 +76,7 @@ a
   .logotip
     height: 28px
     width: 80px
-    background-image: url(/img/mini_logotip.png)
+    background-image: url(./img/mini_logotip.png)
 
   .titleH2
     justify-content: center
