--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -11,7 +11,7 @@
 .logotip
   height: 52px
   width: 150px
-  background-image: url(./img/logotip.png)
+  background-image: url(../img/logotip.png)
 
 .logo
   grid-column: 1 / 2
@@ -36,12 +36,14 @@ a
   grid-column: 2/3
   display: flex
   justify-self: start
+  color: $btnColor
 
 .points_result
   grid-row: 6/7
   grid-column: 2/3
   display: flex
   justify-self: end
+  color: $btnColor
 
 .record_mob
   padding-right: 15px
@@ -76,7 +78,7 @@ a
   .logotip
     height: 28px
     width: 80px
-    background-image: url(./img/mini_logotip.png)
+    background-image: url(../img/mini_logotip.png)
 
   .titleH2
     justify-content: center
