--- a/sass/_mobilMenu.sass
+++ b/sass/_mobilMenu.sass
@@ -75,10 +75,12 @@
 
   .points_snake
     justify-self: center
+    align-self: center
     grid-row: 5/6
     grid-column: 1/2
 
   .points_result
     justify-self: center
+    align-self: center
     grid-row: 5/6
     grid-column: 2/3
