--- a/style/style.css
+++ b/style/style.css
@@ -614,6 +614,7 @@ th {
   position: absolute;
   display: block;
   padding: 10px 10px;
+  text-align: center;
   z-index: 10;
   width: 45%;
   height: 40%;
